--- a/example-configs/settings.yaml
+++ b/example-configs/settings.yaml
@@ -1,7 +1,3 @@
-app:
-  show_header: True
-  show_source: True
-  show_distances: True
 protocols:
   - ftp
   - http
@@ -11,6 +7,10 @@ arches:
   - x86_64
   - i386
   - source
+mirrorlist:
+  show_header: True
+  show_source: True
+  show_distances: True
 mirrors:
   hide_owners: True
 repos:
