in a webapp, header is a bad name for a title string

--- a/example-configs/settings.yaml
+++ b/example-configs/settings.yaml
@@ -8,7 +8,7 @@ arches:
   - i386
   - source
 mirrorlist:
-  show_header: True
+  show_title: True
   show_source: True
   show_distances: True
 mirrors:
